--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <main>
         <section id="login">
             <div id="imagem">
-                Foto
+                <!--Aqui vai a imagem-->
+            </div>
             </div>
             <div id="formulario">
                 <h1>Login</h1>
